# stormcloud

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: stb.c.in
scripts/: run.sh
src/: camera.h  color.h  common.h  ddraw.h  gpu.h  gui.h  main.c  math.h  octree.h
src/shaders/dxil/: basic.frag  basic.vert  bounds.vert  ddraw.vert  gui.frag  gui.vert  point.frag  point.vert
src/shaders/hlsl/: basic.hlsl  bounds.hlsl  ddraw.hlsl  gui.hlsl  point.hlsl
